--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/polyfill": "^7.4.4",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "vee-validate": "^3.4.11",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
     "vue-property-decorator": "^9.1.2",
