--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@ethersproject/contracts": "^5.4.1",
+    "@superfluid-finance/js-sdk": "^0.5.2",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "ethers": "^5.4.4",
     "vee-validate": "^3.4.11",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
+    "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.5.8",
