--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/polyfill": "^7.4.4",
     "@ethersproject/contracts": "^5.4.1",
     "@superfluid-finance/js-sdk": "^0.5.2",
+    "@walletconnect/web3-provider": "^1.5.4",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "ethers": "^5.4.4",
@@ -22,7 +23,9 @@
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.5.8",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "web3modal": "^1.9.4",
+    "web3modal-vue": "^1.0.5"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
