--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@ethersproject/contracts": "^5.4.1",
     "@superfluid-finance/js-sdk": "^0.5.2",
     "@walletconnect/web3-provider": "^1.5.4",
+    "apollo-boost": "^0.4.9",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "ethers": "^5.4.4",
+    "graphql": "^15.5.1",
     "vee-validate": "^3.4.11",
     "vue": "^2.6.11",
+    "vue-apollo": "^3.0.7",
     "vue-chartjs": "^3.5.1",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
