--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "typechain": "npx typechain --target ethers-v5 --out-dir src/models/typechain './src/models/PaymentFactory.json'"
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@mdi/font": "^5.9.55",
+    "@typechain/ethers-v5": "^7.0.1",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^5.2.4",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
@@ -53,6 +55,7 @@
     "prettier": "^2.2.1",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
+    "typechain": "^5.1.2",
     "typescript": "~4.1.5",
     "vue-cli-plugin-vuetify": "~2.4.2",
     "vue-template-compiler": "^2.6.11",
